# whisper-rt-aivis

./: README.md  TODO.md  accuracy_vs_speed.py  audio_level_monitor.py  integrated_speech_system.py  main.py  pyproject.toml  realtime_synthesis.py  realtime_whisper.py  run_examples.py  test_realtime.py
cli/: __init__.py  audio_monitor_cli.py  integrated_cli.py  main_cli.py  recognizer_cli.py  synthesizer_cli.py
config/: .gitignore  defaults.kdl
examples/: README.md  basic_usage.py  calibration.py  gpu_usage.py  quick_start.py
lib/: __init__.py  config_kdl.py  integrated_system.py
lib/recognizer/: __init__.py  whisper_recognizer.py
lib/synthesizer/: __init__.py  synthesizer.py
