[project]
name = "whisper-rt-aivis"
version = "0.1.0"
description = "Near real-time speech recognition and synthesis using Whisper + AivisSpeech"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "numpy>=2.3.2",
    "pyaudio>=0.2.14",
    "requests>=2.32.4",
    "voicevox-client>=1.1.0",
    "faster-whisper>=1.0.0",
    "SpeechRecognition>=3.10.0",
    "torch>=2.7.0",
    "ckdl>=1.0",
]

[project.scripts]
whisper-aivis = "cli.main_cli:main"
whisper-recognize = "cli.recognizer_cli:main_sync"
whisper-synthesize = "cli.synthesizer_cli:main_sync"
whisper-integrated = "cli.integrated_cli:main"
whisper-audio-monitor = "cli.audio_monitor_cli:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "cli"]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]

# Instruct uv to install torch from the official CUDA 12.9 index (Windows/Linux)
[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
